@@ -5,50 +5,57 @@ import android.content.Context;
 import android.content.Intent;
 import android.os.Bundle;
 import android.view.inputmethod.InputMethodManager;
-
 import androidx.appcompat.app.ActionBar;
-
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-
 import eu.siacs.conversations.R;
 import eu.siacs.conversations.entities.Account;
 import eu.siacs.conversations.entities.Contact;
 import eu.siacs.conversations.entities.ListItem;
+import java.util.Collections;
+import java.util.List;
 
 public class ShortcutActivity extends AbstractSearchableListItemActivity {
 
-    private static final List<String> BLACKLISTED_ACTIVITIES = Arrays.asList("com.teslacoilsw.launcher.ChooseActionIntentActivity");
+    private static final List<String> BLACKLISTED_ACTIVITIES =
+            List.of("com.teslacoilsw.launcher.ChooseActionIntentActivity");
 
     @Override
-    protected void refreshUiReal() {
-
-    }
+    protected void refreshUiReal() {}
 
     @Override
     public void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
-        getListView().setOnItemClickListener((parent, view, position, id) -> {
+        getListView()
+                .setOnItemClickListener(
+                        (parent, view, position, id) -> {
+                            final ComponentName callingActivity = getCallingActivity();
 
-            final ComponentName callingActivity = getCallingActivity();
+                            final InputMethodManager imm =
+                                    (InputMethodManager)
+                                            getSystemService(Context.INPUT_METHOD_SERVICE);
+                            imm.hideSoftInputFromWindow(
+                                    getSearchEditText().getWindowToken(),
+                                    InputMethodManager.HIDE_IMPLICIT_ONLY);
 
-            final InputMethodManager imm = (InputMethodManager) getSystemService(Context.INPUT_METHOD_SERVICE);
-            imm.hideSoftInputFromWindow(getSearchEditText().getWindowToken(), InputMethodManager.HIDE_IMPLICIT_ONLY);
-
-            ListItem listItem = getListItems().get(position);
-            final boolean legacy = BLACKLISTED_ACTIVITIES.contains(callingActivity == null ? null : callingActivity.getClassName());
-            Intent shortcut = xmppConnectionService.getShortcutService().createShortcut(((Contact) listItem), legacy);
-            setResult(RESULT_OK,shortcut);
-            finish();
-        });
+                            ListItem listItem = getListItems().get(position);
+                            final boolean legacy =
+                                    BLACKLISTED_ACTIVITIES.contains(
+                                            callingActivity == null
+                                                    ? null
+                                                    : callingActivity.getClassName());
+                            Intent shortcut =
+                                    xmppConnectionService
+                                            .getShortcutService()
+                                            .createShortcut(((Contact) listItem), legacy);
+                            setResult(RESULT_OK, shortcut);
+                            finish();
+                        });
     }
 
     @Override
     public void onStart() {
         super.onStart();
         ActionBar bar = getSupportActionBar();
-        if(bar != null){
+        if (bar != null) {
             bar.setTitle(R.string.create_shortcut);
         }
     }
@@ -63,8 +70,7 @@ public class ShortcutActivity extends AbstractSearchableListItemActivity {
         for (final Account account : xmppConnectionService.getAccounts()) {
             if (account.isEnabled()) {
                 for (final Contact contact : account.getRoster().getContacts()) {
-                    if (contact.showInContactList()
-                            && contact.match(this, needle)) {
+                    if (contact.showInContactList() && contact.match(needle)) {
                         getListItems().add(contact);
                     }
                 }
